--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 This is the Admin creating an index.html file for Tom and Jerry.
-This is tom adding Navigation to the Learn-devops-repository.
+This is to add Navigation to the Learn-devops-repository
+This is to add Contact information to the Learn-devops-repository.
